about to see how the simulation works

--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -340,7 +340,7 @@ function innerGraph(x){
             innerGraph(i);
           }
         }
-        noInfected = true;//for debugging purposes
+        //noInfected = true;//for debugging purposes
         for(i =0; i < neighborhood.length; i++)
         {
           if(neighborhood[i].getStatus() === "susceptible")
